--- a/app/src/main/res/layout/epd_layout_fullscreen.xml
+++ b/app/src/main/res/layout/epd_layout_fullscreen.xml
@@ -16,11 +16,9 @@
 -->
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="@dimen/epd_full_margin"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -30,57 +28,76 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:contentDescription="@string/epd_full_background"
+        android:padding="@dimen/epd_button_padding"
         android:scaleType="centerCrop"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
     <!--Top buttons-->
     <TextView
         android:id="@+id/epd_full_top_start"
-        android:background="@drawable/epd_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/epd_full_top_middle"
         android:layout_alignParentStart="true"
-        android:textSize="@dimen/epd_text_size"
-        android:text="TEST"/>
+        android:background="@drawable/epd_button"
+        android:padding="@dimen/epd_button_padding"
+        android:text="@string/epod"
+        android:textAllCaps="true"
+        android:textColor="@drawable/epd_button"
+        android:textSize="@dimen/epd_text_size"/>
 
     <TextView
         android:id="@+id/epd_full_top_middle"
-        android:background="@drawable/epd_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:textSize="@dimen/epd_text_size"
-        android:text="TEST"/>
+        android:layout_marginBottom="@dimen/epd_button_top_margin"
+        android:background="@drawable/epd_button"
+        android:padding="@dimen/epd_button_padding"
+        android:text="@string/mars"
+        android:textAllCaps="true"
+        android:textSize="@dimen/epd_text_size"/>
 
     <TextView
         android:id="@+id/epd_full_top_end"
-        android:background="@drawable/epd_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@id/epd_full_top_middle"
         android:layout_alignParentEnd="true"
-        android:textSize="@dimen/epd_text_size"
-        android:text="TEST"/>
+        android:background="@drawable/epd_button"
+        android:padding="@dimen/epd_button_padding"
+        android:text="@string/apod"
+        android:textAllCaps="true"
+        android:textSize="@dimen/epd_text_size"/>
 
     <!--Bottom buttons-->
     <TextView
         android:id="@+id/epd_full_bottom_start"
-        android:background="@drawable/epd_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignStart="@+id/epd_full_top_start"
-        android:textSize="@dimen/epd_text_size"
-        android:text="TEST"/>
+        android:layout_marginBottom="@dimen/epd_button_bottom_margin"
+        android:background="@drawable/epd_button"
+        android:padding="@dimen/epd_button_padding"
+        android:text="@string/next"
+        android:textAllCaps="true"
+        android:textSize="@dimen/epd_text_size"/>
 
     <TextView
         android:id="@+id/epd_full_bottom_end"
-        android:background="@drawable/epd_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignEnd="@+id/epd_full_top_end"
         android:layout_alignParentBottom="true"
-        android:textSize="@dimen/epd_text_size"
-        android:text="TEST"/>
+        android:layout_marginBottom="@dimen/epd_button_bottom_margin"
+        android:background="@drawable/epd_button"
+        android:padding="@dimen/epd_button_padding"
+        android:text="@string/more"
+        android:textAllCaps="true"
+        android:textSize="@dimen/epd_text_size"/>
 </RelativeLayout>
