--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,8 @@
 <resources>
     <dimen name="epd_full_margin">40dp</dimen>
     <dimen name="epd_text_size">20dp</dimen>
-    <dimen name="epd_button_padding">8dp</dimen>
+    <dimen name="epd_button_padding">24dp</dimen>
     <dimen name="epd_button_stroke">2dp</dimen>
+    <dimen name="epd_button_bottom_margin">40dp</dimen>
+    <dimen name="epd_button_top_margin">22dp</dimen>
 </resources>
