Add default settings activity.

--- a/app/src/main/res/xml/epd_fullscreen_main_info.xml
+++ b/app/src/main/res/xml/epd_fullscreen_main_info.xml
@@ -23,4 +23,5 @@
     android:resizeMode="none"
     android:updatePeriodMillis="0"
     android:widgetCategory=""
+    android:configure="me.dmitvitalii.cosmos.SettingsActivity"
     tools:ignore="UnusedAttribute"/>
