--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,4 +7,5 @@
     <dimen name="epd_button_stroke">2dp</dimen>
     <dimen name="epd_button_bottom_margin">40dp</dimen>
     <dimen name="epd_button_top_margin">22dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
